--- a/styles.css
+++ b/styles.css
@@ -27,18 +27,20 @@ header {
         height: calc(120px + 32px);
 }
 
-header img {
-        width: 120px;
+header div {
+        width: 125px;
+        margin: auto;
         border-radius: 50%;
-        background-image: linear-gradient(90deg, #9572FC 0%, #43E7AD 50.52%, #E2D45C 100% );
-        border-radius: 50%;
+        background-image: linear-gradient(90deg, #9572FC 0%, #43E7AD 50.52%, #E2D45C 100%);
         display: flex;
-        padding: 4px;
+        justify-content: center;
+        align-items: center;
+        padding: 4px 4px;
         
 }
 
 header div img {
-        width: 120px;
+        width: 100%;
         border-radius: 50%;     
         transition: transform .3s;
 }
@@ -94,11 +96,11 @@ section ul li:hover {
 }
 
 .games-list {
-        width: 90px;
+        width: 100%;
         border-radius: 8px;
 }
 
-.channel-list {
+.channel-list img {
         border-radius: 50%;
         width: 70px;
         border: 1px solid #443e54;
@@ -107,11 +109,11 @@ section ul li:hover {
 /* animation */
 
 header div {
-        animation: fromTop .7s 2s backwards;
+        animation: fromTop .7s .2s backwards;
 }
 
 main section {
-        animation: fromBotton .7s;
+        animation: fromBotton .7s backwards;
 }
 
 main section:nth-chil(1) {
@@ -119,17 +121,17 @@ main section:nth-chil(1) {
 }
 
 main section:nth-child(2) {
-        animation-delay: .4s;
+        animation-delay: .2s;
 }
 
 main section:nth-child(3){
         animation-delay: .4s;
 }
 
-@keyframes fromtop {
+@keyframes fromTop {
         from {
                 opacity: 0;
-                transform: translate(-30px);
+                transform: translateY(-30px);
         }
 
         to {
@@ -141,7 +143,7 @@ main section:nth-child(3){
 @keyframes fromBotton {
         from {
                 opacity: 0;
-                transform: translateY(-30px);
+                transform: translateY(30px);
         }
 
         to {
