UPDATE: atualização css

--- a/styles.css
+++ b/styles.css
@@ -35,7 +35,7 @@ header div {
         display: flex;
         justify-content: center;
         align-items: center;
-        padding: 4px 4px;
+        padding: 4px;
         
 }
 
